- fixed images on mobile

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -106,6 +106,7 @@ img{
 }
 nav{
 	width: 100%;
+	font-family: $sans-font-stack;
 	li{
 		@include transition( color, 500ms);
 		border-bottom: 2px solid $highlight;
